--- a/package.json
+++ b/package.json
@@ -28,9 +28,7 @@
     "typescript": "^3.5.3"
   },
   "dependencies": {
-    "aws-sdk": "^2.713.0",
     "express": "^4.17.1",
-    "jimp": "^0.6.4",
-    "uuid": "^8.2.0"
+    "jimp": "^0.6.4"
   }
 }
